# Nexus

./: .gitignore  Cargo.toml  README.md
Nexus/Nexus/: ContentView.swift  Item.swift  NexusApp.swift
Nexus/Nexus.xcodeproj/: project.pbxproj
Nexus/Nexus/App/: NexusApp.swift  RootView.swift
Nexus/Nexus/Core/Logging/: Loggers.swift
Nexus/Nexus/Core/Notifications/: NotificationContent.swift  NotificationManager.swift  NotificationType.swift
Nexus/Nexus/Core/Storage/: AccountType.swift  AppSettings.swift  NotificationsStatus.swift
Nexus/Nexus/Features/Home/: HomeView.swift
Nexus/Nexus/Features/Notifications/: NotificationsRequiredView.swift
Nexus/Nexus/Features/Setup/: BackButton.swift  ClientSetupView.swift  OTPView.swift  RoleCard.swift  ServerSetupView.swift  SetupStep.swift  SetupView.swift
Nexus/Nexus/Features/Setup/Components/: RoleCard.swift  TypingState.swift  VerificationField.swift
Nexus/Nexus/Features/Setup/Screen/: ClientAddressView.swift  ClientOTPView.swift  RoleSelectionView.swift  ServerSetupView.swift
Nexus/Nexus/Shared/Components/: BackButton.swift
app/: Cargo.toml
app/src/: actions.rs  cli.rs  error.rs  main.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs
infrastructure/src/config/: core.rs  mod.rs
infrastructure/src/filesystem/: error.rs  mod.rs  paths.rs
infrastructure/src/telegram/: core.rs  mod.rs
infrastructure/src/tools/: log.rs
scripts/: build.sh
