[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = "0.17.0"
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
serde_json = "1.0.150"
tokio = "1.52.3"
tracing-appender = "0.2.5"
tracing-subscriber = "0.3.23"
